--- a/styles.css
+++ b/styles.css
@@ -7,38 +7,100 @@ html{
     box-sizing: border-box;
 }
 
-.main-container, .div-container{
+body{
+    display: flex;
+    height: 100vh;
+}
+
+.main-container {
+    display: flex;
+    margin: 0 auto;
+    gap: 50px;
+    align-items: center;
+}
+
+.container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 1px;
-}
-
-.main-container{
-    width: 600px;
-    height: 600px;
-    margin: 250px auto;
+    width: 80vmin;
+    height: 80vmin;
+    margin: 100px auto;
     flex-direction: column;
 }
 
-.div-container{
-    width: 500px;
-    height: 500px;
-    margin-bottom: 30px;
+.btn-container{
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
 }
 
-.div{
-    width: 8px;
-    height: 8px;
+.row{
+    display: flex;
     flex: 1;
-    background-color: rgb(190, 190, 190);
+}
+
+.column{
+    border: 1px solid #000;
+    width: 100%;
+    height: 100%;
 }
 
 .div-hover{
     background-color: blueviolet;
 }
 
-.btn-start{
-    font-size: 18px;
+.btn{
+    font-size: 28px;
+    width: 125px;
+    margin: 0 auto;
+    padding: 7px 0;
+    background: transparent;
+    cursor: pointer;
+    transition: .3s ease-in-out;
 }
+
+.btn-start{
+    border: 3px solid red;
+    color: red;
+}
+.btn-start:hover{
+    background-color: red;
+    color: #fff;
+}
+
+.brush{
+    display: none;
+    border: 3px solid violet;
+    color: violet;
+}
+.brush:hover{
+    background-color: violet;
+    color: #fff;
+}
+
+.rainbow-btn{
+    /* display: none; */
+    border: 3px solid transparent;
+    border-image: repeating-linear-gradient(to right, #b827fc 0%, #2c90fc 25%, 
+    #b8fd23 50%, #fec837 75%, #fd1892 100%);
+    border-image-slice: 1;
+    transition: 0.3s ease-in-out;
+}
+.rainbow-btn:hover{
+    background-image: repeating-linear-gradient(to right, #b827fc 0%, #2c90fc 25%, 
+    #b8fd23 50%, #fec837 75%, #fd1892 100%);
+    border-image-slice: 1;
+    color: #fff;
+}
+
+.remove-btn{
+    display: none;
+    border: 3px solid blue;
+    color: blue;
+}
+.remove-btn:hover{
+    background-color: blue;
+    color: #fff;
+}
+
