--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,23 @@ html{
 body{
     display: flex;
     height: 100vh;
+    background-color: rgba(124, 252, 44, 0.03);
+}
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+.title{
+    text-align: center;
+    font-size: 48px;
+    margin: 30px 0;
 }
 
 .main-container {
     display: flex;
-    margin: 0 auto;
     gap: 50px;
     align-items: center;
 }
@@ -25,7 +37,6 @@ body{
     justify-content: center;
     width: 80vmin;
     height: 80vmin;
-    margin: 100px auto;
     flex-direction: column;
 }
 
@@ -80,7 +91,7 @@ body{
 }
 
 .rainbow-btn{
-    /* display: none; */
+    display: none;
     border: 3px solid transparent;
     border-image: repeating-linear-gradient(to right, #b827fc 0%, #2c90fc 25%, 
     #b8fd23 50%, #fec837 75%, #fd1892 100%);
@@ -103,4 +114,3 @@ body{
     background-color: blue;
     color: #fff;
 }
-
